--- a/restaurant-app/Base.lproj/Main.storyboard
+++ b/restaurant-app/Base.lproj/Main.storyboard
@@ -21,20 +21,20 @@
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="862"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="N94-11-dM4">
-                                    <size key="itemSize" width="408" height="858"/>
+                                    <size key="itemSize" width="335" height="248"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="XaZ-6Y-oPd">
-                                        <rect key="frame" x="3" y="0.0" width="408" height="858"/>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="cellId" id="gpy-Kr-M78">
+                                        <rect key="frame" x="39.5" y="0.0" width="335" height="248"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="AVH-qO-EGR">
-                                            <rect key="frame" x="0.0" y="0.0" width="408" height="858"/>
+                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="MuK-2l-oSM">
+                                            <rect key="frame" x="0.0" y="0.0" width="335" height="248"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                         </collectionViewCellContentView>
-                                        <size key="customSize" width="408" height="858"/>
+                                        <size key="customSize" width="335" height="248"/>
                                     </collectionViewCell>
                                 </cells>
                             </collectionView>
@@ -48,6 +48,9 @@
                             <constraint firstItem="I2e-ue-DYV" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="vVd-JR-ipb"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="collectionView" destination="I2e-ue-DYV" id="47V-ex-uOM"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
