--- a/restaurant-app/Base.lproj/Main.storyboard
+++ b/restaurant-app/Base.lproj/Main.storyboard
@@ -21,20 +21,73 @@
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="862"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="N94-11-dM4">
-                                    <size key="itemSize" width="335" height="248"/>
+                                    <size key="itemSize" width="335" height="816"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="cellId" id="gpy-Kr-M78">
-                                        <rect key="frame" x="39.5" y="0.0" width="335" height="248"/>
+                                        <rect key="frame" x="39.5" y="0.0" width="335" height="816"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="MuK-2l-oSM">
-                                            <rect key="frame" x="0.0" y="0.0" width="335" height="248"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="335" height="816"/>
                                             <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="7iX-28-Hg1">
+                                                    <rect key="frame" x="0.0" y="151.5" width="335" height="513"/>
+                                                    <subviews>
+                                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="WD8-3y-1MR">
+                                                            <rect key="frame" x="0.0" y="0.0" width="335" height="335"/>
+                                                            <color key="backgroundColor" systemColor="systemTealColor"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="width" secondItem="WD8-3y-1MR" secondAttribute="height" multiplier="1:1" id="oD8-4e-Akt"/>
+                                                            </constraints>
+                                                        </view>
+                                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8AC-ez-Smz">
+                                                            <rect key="frame" x="0.0" y="335" width="335" height="128"/>
+                                                            <subviews>
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Food at its best" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jqH-3m-HzK">
+                                                                    <rect key="frame" x="30" y="30" width="275" height="68"/>
+                                                                    <fontDescription key="fontDescription" type="system" pointSize="22"/>
+                                                                    <nil key="textColor"/>
+                                                                    <nil key="highlightedColor"/>
+                                                                </label>
+                                                            </subviews>
+                                                            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                                            <constraints>
+                                                                <constraint firstItem="jqH-3m-HzK" firstAttribute="leading" secondItem="8AC-ez-Smz" secondAttribute="leading" constant="30" id="Mwz-g7-zbP"/>
+                                                                <constraint firstAttribute="trailing" secondItem="jqH-3m-HzK" secondAttribute="trailing" constant="30" id="W7i-CG-IRf"/>
+                                                                <constraint firstAttribute="bottom" secondItem="jqH-3m-HzK" secondAttribute="bottom" constant="30" id="YQC-3M-Rtc"/>
+                                                                <constraint firstItem="jqH-3m-HzK" firstAttribute="top" secondItem="8AC-ez-Smz" secondAttribute="top" constant="30" id="km5-nl-9rQ"/>
+                                                            </constraints>
+                                                        </view>
+                                                        <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qOC-2t-gEP">
+                                                            <rect key="frame" x="0.0" y="463" width="335" height="50"/>
+                                                            <subviews>
+                                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="h4c-sf-Bqx">
+                                                                    <rect key="frame" x="0.0" y="0.0" width="335" height="50"/>
+                                                                    <constraints>
+                                                                        <constraint firstAttribute="height" constant="50" id="8MY-vp-8Qx"/>
+                                                                    </constraints>
+                                                                    <fontDescription key="fontDescription" type="system" pointSize="24"/>
+                                                                    <state key="normal" title="Get Started">
+                                                                        <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                                    </state>
+                                                                </button>
+                                                            </subviews>
+                                                        </stackView>
+                                                    </subviews>
+                                                    <color key="backgroundColor" red="0.035082925110000003" green="0.57287740710000001" blue="0.15052819249999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                </stackView>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="trailing" secondItem="7iX-28-Hg1" secondAttribute="trailing" id="2NN-lV-o0A"/>
+                                                <constraint firstItem="7iX-28-Hg1" firstAttribute="leading" secondItem="MuK-2l-oSM" secondAttribute="leading" id="Xn1-gW-asW"/>
+                                                <constraint firstItem="7iX-28-Hg1" firstAttribute="centerY" secondItem="MuK-2l-oSM" secondAttribute="centerY" id="r28-Cy-CS0"/>
+                                            </constraints>
                                         </collectionViewCellContentView>
-                                        <size key="customSize" width="335" height="248"/>
+                                        <size key="customSize" width="335" height="816"/>
                                     </collectionViewCell>
                                 </cells>
                             </collectionView>
@@ -60,6 +113,9 @@
     <resources>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemTealColor">
+            <color red="0.35294117647058826" green="0.78431372549019607" blue="0.98039215686274506" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
