--- a/restaurant-app/Base.lproj/Main.storyboard
+++ b/restaurant-app/Base.lproj/Main.storyboard
@@ -27,7 +27,7 @@
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="cellId" id="gpy-Kr-M78">
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="cellId" id="gpy-Kr-M78" customClass="OnboardingCell" customModule="restaurant_app" customModuleProvider="target">
                                         <rect key="frame" x="39.5" y="0.0" width="335" height="816"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="MuK-2l-oSM">
@@ -65,8 +65,15 @@
                                                         <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qOC-2t-gEP">
                                                             <rect key="frame" x="0.0" y="463" width="335" height="50"/>
                                                             <subviews>
+                                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tue-jB-Jzs">
+                                                                    <rect key="frame" x="0.0" y="0.0" width="25" height="50"/>
+                                                                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                                                    <constraints>
+                                                                        <constraint firstAttribute="width" secondItem="tue-jB-Jzs" secondAttribute="height" multiplier="1:2" id="2kQ-tQ-fMw"/>
+                                                                    </constraints>
+                                                                </view>
                                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="h4c-sf-Bqx">
-                                                                    <rect key="frame" x="0.0" y="0.0" width="335" height="50"/>
+                                                                    <rect key="frame" x="25" y="0.0" width="285" height="50"/>
                                                                     <constraints>
                                                                         <constraint firstAttribute="height" constant="50" id="8MY-vp-8Qx"/>
                                                                     </constraints>
@@ -74,7 +81,17 @@
                                                                     <state key="normal" title="Get Started">
                                                                         <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                     </state>
+                                                                    <connections>
+                                                                        <action selector="actionButtonTapped" destination="gpy-Kr-M78" eventType="touchUpInside" id="oqM-7x-Eht"/>
+                                                                    </connections>
                                                                 </button>
+                                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Nf5-9M-iRv">
+                                                                    <rect key="frame" x="310" y="0.0" width="25" height="50"/>
+                                                                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                                                    <constraints>
+                                                                        <constraint firstAttribute="width" secondItem="Nf5-9M-iRv" secondAttribute="height" multiplier="1:2" id="0qq-FT-Mrk"/>
+                                                                    </constraints>
+                                                                </view>
                                                             </subviews>
                                                         </stackView>
                                                     </subviews>
@@ -88,6 +105,10 @@
                                             </constraints>
                                         </collectionViewCellContentView>
                                         <size key="customSize" width="335" height="816"/>
+                                        <connections>
+                                            <outlet property="animationView" destination="WD8-3y-1MR" id="PcI-Om-OZh"/>
+                                            <outlet property="titleLabel" destination="jqH-3m-HzK" id="RaY-wV-320"/>
+                                        </connections>
                                     </collectionViewCell>
                                 </cells>
                             </collectionView>
