--- a/restaurant-app/Base.lproj/Main.storyboard
+++ b/restaurant-app/Base.lproj/Main.storyboard
@@ -17,8 +17,13 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <pageControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" numberOfPages="3" translatesAutoresizingMaskIntoConstraints="NO" id="kUW-ut-Ngo">
+                                <rect key="frame" x="291.5" y="50" width="122.5" height="27.5"/>
+                                <color key="pageIndicatorTintColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="currentPageIndicatorTintColor" systemColor="systemGreenColor"/>
+                            </pageControl>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="I2e-ue-DYV">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="862"/>
+                                <rect key="frame" x="0.0" y="90" width="414" height="772"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="N94-11-dM4">
                                     <size key="itemSize" width="335" height="816"/>
@@ -117,19 +122,53 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
+                            <constraint firstItem="kUW-ut-Ngo" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" constant="50" id="0pJ-wk-g4i"/>
                             <constraint firstItem="I2e-ue-DYV" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="7vs-Xy-96y"/>
                             <constraint firstItem="I2e-ue-DYV" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="eVk-sg-1cE"/>
-                            <constraint firstItem="I2e-ue-DYV" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="iHA-eM-n1G"/>
+                            <constraint firstItem="I2e-ue-DYV" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" constant="90" id="iHA-eM-n1G"/>
                             <constraint firstItem="I2e-ue-DYV" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="vVd-JR-ipb"/>
+                            <constraint firstAttribute="trailing" secondItem="kUW-ut-Ngo" secondAttribute="trailing" id="zcs-5v-6Hr"/>
                         </constraints>
                     </view>
                     <connections>
                         <outlet property="collectionView" destination="I2e-ue-DYV" id="47V-ex-uOM"/>
+                        <outlet property="pageControl" destination="kUW-ut-Ngo" id="TMZ-jS-RMR"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-23.188405797101453" y="137.94642857142856"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="1hb-Oc-z6R">
+            <objects>
+                <viewController storyboardIdentifier="MainAppViewController" id="bBz-Hb-pag" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Djm-J7-Lqn">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Pizza is done" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Qty-RU-41r">
+                                <rect key="frame" x="145" y="435" width="124.5" height="26.5"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="124.5" id="0Xi-O6-yCs"/>
+                                    <constraint firstAttribute="height" constant="26.5" id="oPU-ni-gE1"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="22"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="B66-L8-Wnz"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="Qty-RU-41r" firstAttribute="centerY" secondItem="Djm-J7-Lqn" secondAttribute="centerY" id="egd-rX-9nV"/>
+                            <constraint firstItem="Qty-RU-41r" firstAttribute="centerX" secondItem="Djm-J7-Lqn" secondAttribute="centerX" id="sFO-zp-FKY"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="wRy-Xe-hsL" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1065.217391304348" y="131.91964285714286"/>
         </scene>
     </scenes>
     <designables>
@@ -138,6 +177,9 @@
     <resources>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemGreenColor">
+            <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
